# RTX_WiFi_Optimizer

./: .gitignore  THIRD_PARTY_NOTICES.md  pyproject.toml  readme.md  requirements-sionna.txt  requirements.txt
configs/: room_example.json
docs/: readme_backend_choice.dot  readme_entry_points.dot  readme_outputs.dot  wifi_optimizer_flow.dot
room_reconstruction/: LICENSE
room_reconstruction/code/confs/: runconf_demo_1.conf  runconf_demo_2.conf
room_reconstruction/code/confs/7scenes/: runconf_7scenes_1.conf  runconf_7scenes_2.conf  (+5 more)
room_reconstruction/code/datasets/: scene_dataset.py
room_reconstruction/code/evaluation/: eval_cam.py  eval_rec.py  eval_rendering.py
room_reconstruction/code/hashencoder/: backend.py  hashgrid.py
room_reconstruction/code/model/: base_networks.py  density.py  embedder.py  loss.py  network.py  ray_sampler.py
room_reconstruction/code/training/: exp_runner.py  volsdf_train.py
room_reconstruction/code/utils/: MiDaS.py  cam_util.py  general.py  plots.py  rend_util.py  viz.py
room_reconstruction/env_yamls/: gmflow.yaml  omnidata.yaml  reconstruction.yaml
room_reconstruction/preprocess/: 7scenes_2_volsdf.py  azure_2_volsdf.py  extract_flows.py  extract_monocular_cues.py  get_mesh_7scenes.py  replica_2_volsdf.py  replica_eval_2_volsdf.py
room_reconstruction/preprocess/colmap_utils/: colmap_read_model.py  colmap_wrapper.py  pose_utils.py
tests/: test_cpu_backend.py
wifi_optimizer/: __init__.py  cli.py  fallback_backend.py  images.py  mesh_utils.py  optimizer.py  plots.py  reconstruct.py  rf_math.py  sionna_backend.py
(+18 files in other folders)
